# EBook

./: .gitignore  settings.gradle
fBReader/: CMakeLists.txt  build.gradle  jxtapp.keystore
fBReader/doc/: fbread.puml
fBReader/libs/: superToasts-release.aar
fBReader/src/main/: AndroidManifest.xml
fBReader/src/main/assets/default/tapzones/: right_to_left.xml
fBReader/src/main/cpp/NativeFormats/: JavaPluginCollection.cpp
fBReader/src/main/cpp/NativeFormats/fbreader/src/formats/: PluginCollection.cpp
fBReader/src/main/cpp/NativeFormats/fbreader/src/formats/txt/: PlainTextFormat.cpp
fBReader/src/main/java/org/amse/ys/zip/: ZipFile.java
fBReader/src/main/java/org/geometerplus/: MainActivity.java
fBReader/src/main/java/org/geometerplus/android/fbreader/: BookLibrary.java  FBReader.java  FBReaderMainActivity.java  NavigationPopup.java  PopupPanel.java  ProcessHyperlinkAction.java  SQLiteBooksDatabase.java  SelectionPopup.java  SelectionShareAction.java
fBReader/src/main/java/org/geometerplus/android/fbreader/api/: FBReaderIntents.java
fBReader/src/main/java/org/geometerplus/android/fbreader/config/: ConfigShadow.java
fBReader/src/main/java/org/geometerplus/android/fbreader/image/: ImageViewActivity.java
fBReader/src/main/java/org/geometerplus/android/util/eink/: Nook2Util.java
fBReader/src/main/java/org/geometerplus/fbreader/: Paths.java
fBReader/src/main/java/org/geometerplus/fbreader/book/: AbstractBook.java  Book.java  BookCollection.java  BookUtil.java  Bookmark.java  SeriesInfo.java
fBReader/src/main/java/org/geometerplus/fbreader/bookmodel/: BookModel.java  FBTextKind.java
fBReader/src/main/java/org/geometerplus/fbreader/fbreader/: FBReaderApp.java  FBView.java  TapZoneMap.java
fBReader/src/main/java/org/geometerplus/fbreader/fbreader/options/: ColorProfile.java  ImageOptions.java  MiscOptions.java  PageTurningOptions.java  SyncOptions.java
fBReader/src/main/java/org/geometerplus/fbreader/formats/: BuiltinFormatPlugin.java  ComicBookPlugin.java  DjVuPlugin.java  FormatPlugin.java  IFormatPluginCollection.java  NativeFormatPlugin.java  PluginCollection.java
fBReader/src/main/java/org/geometerplus/fbreader/formats/fb2/: FB2AnnotationReader.java
fBReader/src/main/java/org/geometerplus/fbreader/formats/oeb/: OEBAnnotationReader.java  OEBNativePlugin.java
fBReader/src/main/java/org/geometerplus/fbreader/sort/: TitledEntity.java
fBReader/src/main/java/org/geometerplus/zlibrary/core/application/: ZLApplication.java  ZLKeyBindings.java
fBReader/src/main/java/org/geometerplus/zlibrary/core/filesystem/: ZLFile.java  ZLZipEntryFile.java
fBReader/src/main/java/org/geometerplus/zlibrary/core/image/: ZLImageProxy.java  ZLStreamImage.java
fBReader/src/main/java/org/geometerplus/zlibrary/core/language/: Language.java
fBReader/src/main/java/org/geometerplus/zlibrary/core/options/: Config.java
fBReader/src/main/java/org/geometerplus/zlibrary/core/resources/: ZLTreeResource.java
fBReader/src/main/java/org/geometerplus/zlibrary/core/tree/: ZLTree.java
fBReader/src/main/java/org/geometerplus/zlibrary/core/view/: Hull.java  ZLPaintContext.java  ZLView.java  ZLViewEnums.java
fBReader/src/main/java/org/geometerplus/zlibrary/core/xml/: ZLXMLProcessor.java  ZLXMLReader.java
fBReader/src/main/java/org/geometerplus/zlibrary/text/hyphenation/: ZLTextTeXHyphenator.java
fBReader/src/main/java/org/geometerplus/zlibrary/text/model/: CachedCharStorage.java  ZLTextParagraph.java  ZLTextPlainModel.java
fBReader/src/main/java/org/geometerplus/zlibrary/text/view/: CursorManager.java  PaintStateEnum.java  ZLTextFixedPosition.java  ZLTextPage.java  ZLTextParagraphCursor.java  ZLTextRegion.java  ZLTextView.java  ZLTextViewBase.java
fBReader/src/main/java/org/geometerplus/zlibrary/text/view/style/: ZLTextExplicitlyDecoratedStyle.java  ZLTextNGStyleDescription.java
fBReader/src/main/java/org/geometerplus/zlibrary/ui/android/image/: ZLAndroidImageLoader.java
fBReader/src/main/java/org/geometerplus/zlibrary/ui/android/view/: AndroidFontUtil.java  BitmapManagerImpl.java  ZLAndroidWidget.java
fBReader/src/main/java/org/geometerplus/zlibrary/ui/android/view/animation/: AnimationProvider.java  CurlAnimationProvider.java  NoneAnimationProvider.java  SlideAnimationProvider.java
fBReader/src/main/res/layout/: activity_main.xml  navigation_panel.xml  selection_panel.xml
fBReader/src/main/res/values/: styles.xml
fBReader/src/main/res/values-v11/: styles.xml
fBReader/src/main/res/values-v14/: styles.xml
reader/: build.gradle  proguard-rules.pro
reader/libs/: fBReader-release.aar
reader/src/androidTest/java/me/felix/reader/: ExampleInstrumentedTest.java
reader/src/main/: AndroidManifest.xml
reader/src/main/java/me/felix/reader/: EReader.java  MainActivity.java  PdfActivity.java
reader/src/main/res/layout/: activity_pdf.xml  layout_pdf_navigation_panel.xml
reader/src/main/res/values/: styles.xml
reader/src/test/java/me/felix/reader/: ExampleUnitTest.java
superToasts/: build.gradle
superToasts/src/main/java/com/github/johnpersano/supertoasts/: SuperToast.java
